Results for a single node execution (#28)